tests/should_fail/unsupported/macros.stderr
error: Unsupported expression: macros other than `pearlite!` or `proof_assert!` or `seq!` are unsupported in pearlite code
 --> macros.rs:7:5
  |
7 |     panic!()
  |     ^^^^^^^^

error: aborting due to 1 previous error

